# linq-network

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .npmignore  .travis.yml  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  COPYING  Cargo.toml  Makefile  README.md  about.html  binding.gyp  cmake_install.cmake  diff.diff  genindex.html  http-routingtable.html  index.html  libzmq-static-loc.txt  objects.inv  package-lock.json  package.json  roles.html  search.html  searchindex.js  sitemap.xml  tsconfig.base.json
apps/linqd/: CMakeLists.txt  callbacks.c  callbacks.h  config.c  config.h  json.c  json.h  log.h  main.c  parse_config.c  parse_config.h  route_config.c  route_config.h  sys.c  sys.h
apps/linqd/test/: CMakeLists.txt  main.c
bindings/cpp/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  atx_net.hpp  cmake_install.cmake  linq.hpp  linq_io.hpp  linq_netw.hpp  linq_network.hpp  netw.hpp
bindings/cpp/test/: CMakeLists.txt  main.cpp
bindings/nodejs/: .ycm_extra_conf.py  CMakeLists.txt  package-lock.json  package.json
bindings/nodejs/lib/: LinqDaemon.ts  LinqNetwork.ts  LinqUsbh.ts  TlsTerminate.ts  event.ts  index.ts  jest.config.js  tlsTerminate.ts  tsconfig.json  types.ts  update.ts
bindings/nodejs/scripts/: read_zmq_version.ps1
bindings/nodejs/src/: DaemonJS.cc  LogJS.cc  LogJS.h  NetwJS.cc  NetwJS.h  UsbhJS.cc  UsbhJS.h  atxnet.cc  atxnet.h  binding.cc  index.js  linq_daemon_js.cc  linq_daemon_js.h  linq_network_js.cc  linq_network_js.h  linq_usbh_js.cc  linq_usbh_js.h  linqnetwork.cc  linqnetwork.h
examples/server/: CMakeLists.txt  main.c
examples/server/www/: index.html
libcommon/: CMakeLists.txt  base64.h  common.h  config.c  config.h  containers.h  device.c  device.h  json.h  log.c  log.h  rlp.c
libcommon/sys/unix/: sys.c  sys.h
libcommon/sys/win/: sys.c  sys.h
libcommon/test/config/: CMakeLists.txt  main.c
libcommon/test/containers/: main.c
libcommon/test/device/: main.c
libcommon/test/devices/: CMakeLists.txt  main.c
libcommon/test/jsmn/: CMakeLists.txt
libcommon/test/rlp/: CMakeLists.txt
libcommon/test/sys/: CMakeLists.txt
libdaemon/: CMakeLists.txt  daemon.c  daemon.h  linq_daemon.h
libdaemon/test/: CMakeLists.txt  main.c
libdatabase/: CMakeLists.txt  alert.c  database.c  database.h  device.c
libdatabase/test/: CMakeLists.txt
libhttp/: CMakeLists.txt  http.c  http.h  http_auth.c  http_auth.h  http_users.c  http_users.h  route_proxy.c
libhttp/test/http/: CMakeLists.txt  main.c
libhttp/test/routes/: CMakeLists.txt  alerts.c  create_admin.c  create_admin.h  devices.c  devices.h  login.c  main.c  proxy.c
libnetwork/: CMakeLists.txt  callbacks.c  callbacks.h  device.c  device.h  linq_network.c  linq_network.h  linq_network_internal.h  netw.c  netw.h  netw_internal.h  node.c  node.h  zmtp.c  zmtp.h  zmtp_device.c  zmtp_device.h
libnetwork/routes/: alerts.c  devices.c  proxy.c  quit.c  route_alerts.c  route_connect.c  route_devices.c  route_proxy.c  route_quit.c  route_scan.c  routes.h  scan.c  users.c
libnetwork/test/callbacks/: CMakeLists.txt  main.c
libnetwork/test/device/: CMakeLists.txt  main.c
libnetwork/test/linq_network/: main.c
libnetwork/test/routes/: CMakeLists.txt  alerts.c  connect.c  connect.h  create_admin.c  devices.c  login.c  main.c  (+6 more)
libusb/common/: CMakeLists.txt  wire.c  wire.h
libusb/device/: CMakeLists.txt  linq_usbd.c  usbd.c  usbd.h
libusb/host/: CMakeLists.txt  io.h  io_k64_mqx.h  io_m5.c  io_m5.h  linq_usbh.c  usbh.c  usbh.h
libutils/: CMakeLists.txt  base64.c  containers.h
linq_daemon/: CMakeLists.txt  linq_daemon.c  linq_daemon.h  main.c
linq_daemon/test/: CMakeLists.txt  main.c
linq_database/: CMakeLists.txt  alert.c  alert.h  database.c  database.h  device.c  device.h  sqlite3.h  user.c  user.h
linq_database/test/: CMakeLists.txt  main.c
linq_http/: CMakeLists.txt  http.c  http.h  http_auth.c  http_auth.h  route_alerts.c  route_devices.c  route_proxy.c  route_users.c
linq_http/routes/: route_alerts.c  route_devices.c  route_proxy.c  route_users.c
linq_network/: CMakeLists.txt  base64.h  device.c  device.h  http.c  http_auth.c  http_auth.h  http_auth_unsafe.h  linq_network.c  linq_network.h  linq_network_internal.h  log.h  mongoose.h  sys.c  zmtp.c  zmtp.h
linq_network/database/: database.c  database.h
linq_network/routes/: route_alerts.c
linq_usb/: CMakeLists.txt
linq_usb/common/: CMakeLists.txt  wire.c  wire.h
linq_usb/device/: CMakeLists.txt  config.h  linq_usb.c  linq_usb.h  linq_usbd.c  linq_usbd.h  wire_event.c  wire_event.h
linq_usb/host/: CMakeLists.txt  io.c  io.h  io_k64_mqx.c  io_k64_mqx.h  io_m5.c  io_m5.h  linq_usb.c  linq_usb.h  linq_usbh.c  linq_usbh.h
linq_utils/: CMakeLists.txt  base64.h  containers.h  jsmn_helpers.c  jsmn_helpers.h  json.c  json.h  log.h  rlp.c  rlp.h
src/: CMakeLists.txt  Makefile  atx_net.c  atx_net_internal.h  base64.h  cmake_install.cmake  containers.h  device.c  device.h  device_map.c  device_map.h  device_request.c  device_request.h  devices.c  devices.h  http.c  http.h  http_auth.c  http_auth.h  http_auth_unsafe.h  jsmn.c  jsmn_helpers.c  jsmn_helpers.h  linq.c  linq_internal.h  linq_io.c  linq_io_internal.h  linq_ipc.c  linq_ipc.h  linq_netw.c  linq_netw_internal.h  linq_network.c  log.h  mongoose.c  mongoose.h  netw.c  netw.h  netw_internal.h  node.c  node.h  (+12 more)
src/common/: common.h  config.c  config.h  containers.h  device.c  device.h  json.c  json.h  log.c  log.h  rlp.h
src/database/: database.c  database.h  database_alerts.c  database_alerts.h  database_devices.c  database_devices.h
src/mock/: sys.c  sys.h
src/routes/: route_alerts.c  route_devices.c  route_proxy.c  route_users.c  routes.h
src/unix/: sys.c  sys.h
src/win/: sys.c  sys.h
src/zmtp/: callbacks.c  callbacks.h  node.c  node.h  zmtp.c  zmtp.h  zmtp_device.c  zmtp_device.h
test/_mocks/: CMakeLists.txt  main.c  mock_zmsg.c  mock_zpoll.c  mock_zpoll.h  mock_zsock.c
test/atx-net/: CMakeLists.txt  main.c
test/db/: CMakeLists.txt  main.c
test/device/: CMakeLists.txt  main.c
test/device-requests/: CMakeLists.txt  main.c
(+1081 files in other folders)
